--- a/stacks/tautulli/docker-compose.yml
+++ b/stacks/tautulli/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     image: tautulli/tautulli
     restart: unless-stopped
     environment:
-      - PGID=${PGID:1000} # GroupID
-      - PUID=${PUID:1000} # UserID
-      - TZ=${TZ:Europe/Chisinau} # Timezone
+      - PGID=${PGID:-1000} # GroupID
+      - PUID=${PUID:-1000} # UserID
+      - TZ=${TZ:-Europe/Chisinau} # Timezone
     volumes:
-      - ${CONFIG_PATH:/appdata/tautulli}:/config # Contains Tautulli config and database
+      - ${CONFIG_PATH:-/appdata/tautulli}:/config # Contains Tautulli config and database
     ports:
-      - ${PORT:8181}:8181' # WebUI Port
+      - ${PORT:-8181}:8181' # WebUI Port
