Add radarr stack

--- a/stacks/sonarr/docker-stack.yml
+++ b/stacks/sonarr/docker-stack.yml
@@ -1,5 +1,5 @@
 # title=Sonarr
-# description=PVR for newsgroup and bittorrent users for downloading/organising TV shows
+# description=TV Shows collection manager for Usenet and BitTorrent users
 # logo=https://raw.githubusercontent.com/Sonarr/Sonarr/phantom-develop/Logo/256.png
 # categories=media
 
