--- a/stacks/radarr/docker-stack.yml
+++ b/stacks/radarr/docker-stack.yml
@@ -1,4 +1,4 @@
-# title=Sonarr
+# title=Radarr
 # description=Movie collection manager for Usenet and BitTorrent users
 # logo=https://raw.githubusercontent.com/Radarr/Radarr/develop/Logo/64.png
 # categories=media
@@ -7,7 +7,7 @@
 version: "3.2"
 
 services:
-  radarr:
+  app:
     image: ghcr.io/linuxserver/radarr
     restart: unless-stopped
     environment:
