Fix qbittorrent stack

--- a/stacks/jackett/docker-stack.yml
+++ b/stacks/jackett/docker-stack.yml
@@ -7,7 +7,7 @@
 version: "3.2"
 
 services:
-  jackett:
+  app:
     image: ghcr.io/linuxserver/jackett
     restart: unless-stopped
     environment:
