Fix radarr stack

--- a/stacks/radarr/docker-stack.yml
+++ b/stacks/radarr/docker-stack.yml
@@ -19,4 +19,4 @@ services:
       - /mnt/storage/movies:/movies # The Movies location
       - /mnt/storage/downloads:/downloads # The downloads location
     ports:
-      - ${7878:-7878}:7878 # WebUI Port
+      - ${PORT:-7878}:7878 # WebUI Port
