Fix tautulli stack

--- a/stacks/tautulli/docker-stack.yml
+++ b/stacks/tautulli/docker-stack.yml
@@ -15,6 +15,6 @@ services:
       - PGID=${PGID:-1000} # GroupID
       - TZ=${TZ:-Europe/Chisinau} # Timezone
     volumes:
-      - ${CONFIG_PATH}:/config # Contains Tautulli config and database
+      - ${CONFIG_PATH:-/appdata/tautulli}:/config # Contains Tautulli config and database
     ports:
       - ${PORT:-8181}:8181 # WebUI Port
