--- a/stacks/plex/docker-compose.yml
+++ b/stacks/plex/docker-compose.yml
@@ -4,10 +4,10 @@
 # categories=media
 
 ---
-version: "3.2"
+version: "2.4"
 
 services:
-  plex:
+  app:
     image: ghcr.io/linuxserver/plex
     network_mode: host
     restart: unless-stopped
@@ -16,7 +16,7 @@ services:
       - PGID=${PGID:-1000} # GroupID
       - UMASK_SET=${UMASK_SET:-022} # Plex file-creation mode
       - VERSION=docker #
-      - PLEX_CLAIM= # Claim token from https://plex.tv/claim
+      - PLEX_CLAIM= # Claim at https://plex.tv/claim
     volumes:
       - ${APPDATA:-/appdata/plex}:/config # Plex appdata location
       - ${STORAGE:-/mnt/storage}:/mnt/storage # Media library location
