--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "nas-setup",
+  "name": "selfhosted",
   "version": "0.1.0",
-  "description": "App template definitions",
-  "homepage": "https://github.com/hobroker/nas-setup#readme",
+  "description": "Personal selfhosted services",
+  "homepage": "https://github.com/hobroker/selfhosted#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hobroker/nas-setup.git"
+    "url": "git+https://github.com/hobroker/selfhosted.git"
   },
   "author": "Igor Leahu <igor.leahu24@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hobroker/nas-setup/issues"
+    "url": "https://github.com/hobroker/selfhosted/issues"
   },
   "keywords": [
     "nas",
     "docker",
     "portainer"
   ],
-  "main": "tool/index.js",
-  "dependencies": {
-    "serve": "^11.3.2"
-  },
-  "devDependencies": {},
+  "main": "src/lib/index.js",
   "scripts": {
-    "build": "node tool",
-    "serve": "serve -l 8000",
-    "dev": "npm run build && cat templates.json"
-  }
+    "start": "node src/lib",
+    "serve": "node src/dev-server",
+    "dev": "npm run start && cat templates.json"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
